HSEARCH-3226 Don't use the --add-module options when running tests